# GBA-Global-Link

./: .gitignore  LICENSE  README.md
adapter/: Cargo.toml
adapter/src/: main.rs  serial_usb.rs
adapter/src/comms/: gpi.rs  login.rs  macros.rs  mod.rs  packet.rs  result.rs  routes.rs  spi.rs  wap.rs
api/: .eslintrc.cjs  bun.lockb  package.json  tsconfig.json
api/src/: config.ts  index.ts
shared/: bun.lockb  package.json
shared/src/: command.ts  emit.ts  index.ts  registerCallback.ts  utils.ts
web-app/: bun.lockb  index.html  package.json  tsconfig.json
web-app/src/: app.tsx  config.ts  global.d.ts  index.html  index.tsx  socket.ts
web-app/src/gba/: gba.ts  index.ts  router.ts  serial.ts
