[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"

[dependencies]
circular-buffer = { version = "0.1.6", default-features = false }
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1.2"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = { version = "1.0.0-alpha.11" }
fugit = "0.3"
heapless = "0.7"
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "c565c47", default_features = false }
num_enum = { version = "0.7.1", default-features = false }
once_cell = { version = "1.19.0", features = ["critical-section"], default-features = false }
panic-halt = "0.2.0"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
rp-pico = "0.8"
rp2040-hal = { version="0.9", features=["rt", "eh1_0_alpha"] }
safe-transmute = { version = "0.11.2", default-features = false }
static_cell = "2.0.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
usbd-webusb = "1.0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
